Fix spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -339,12 +339,13 @@ a .btn-border {
 }
 
 .nav-image {
-	width: 12px;
-	height: 12px;
+	width: 32px;
+	height: 32px;
 	margin: 8px 0;
 	margin-top: 8px;
 	margin-bottom: 10px;
  	border-radius: 2px;
+	margin-right: 10px;
 }
 
 /* miniNotification jQuery plugin */
